# covid-19

./: .coveragerc  .gitignore  .gitlab-ci.yml  README.rst  ROADMAP.rst  TODO.txt  docker-compose.yml  pyproject.toml  requirements.txt  tasks.py  tox.ini
.github/actions/: action.yml
.github/actions/gitlab-ci/: Dockerfile  cred-helper.sh  entrypoint.sh
.github/workflows/: trigger-gitlab.yml
covid/: __init__.py  all.py  cache.py  data.py  region.py  types.py  utils.py
covid/data/: __init__.py  brasil_io.py  cia_factbook.py  contact_matrix.py  data.py  ibge.py  ibge_demographic.py  mortality.py
covid/data/countries/: __init__.py  wesp.py  (+4 more)
covid/datasets/: brazil_healthcare_capacity.csv  brazil_healthcare_capacity.xlsx  brazil_healthcare_capacity_full.csv  brazil_metro.json  cia_factbook-age_distribution.csv  cia_factbook-hospital_bed_density.csv  cia_factbook-hospital_bed_density.md  covid-mortality-imperial-college.csv  covid-mortality-verity.csv
covid/locale/: base.pot  messages.pot
covid/models/: __init__.py  exponential.py  model.py  model_ensemble.py  plot.py  rseicha.py  rseicha_demographic.py  seichar.py  seichar_demographic.py
covid/notebooks/: demographics.ipynb  relatorio_regiao.ipynb  report.ipynb  sp_metro.ipynb
covid/parameters/: base.py  clinical.py  epidemic.py
covid/plot/: utils.py
covid/simulation/: world_infections.py
covid/ui/: calc.py  components.py  custom.html  input.py  output.py
docker/: covid.Dockerfile
docs/: getting-started.rst
tests/: test_countries.py  test_data_loader.py  test_region.py  test_types.py  test_utils.py
(+5604 files in other folders)
